--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sparkleens - Professional Cleaning Services | Fast & Reliable</title>
+  <title>Broome Service Solutions - Professional Cleaning Services | Fast & Reliable</title>
     <meta name="description" content="Get professional cleaning for homes, offices, and commercial spaces. Transparent 3-step process, customized quotes, and consistent results. Book your free quote today!" />
-    <meta name="author" content="Sparkleens" />
+  <meta name="author" content="Broome Service Solutions" />
     <meta name="keywords" content="cleaning services, home cleaning, office cleaning, professional cleaners, deep cleaning, move in cleaning, move out cleaning" />
 
-    <meta property="og:title" content="Sparkleens - Professional Cleaning Done Right" />
+  <meta property="og:title" content="Broome Service Solutions - Professional Cleaning Done Right" />
     <meta property="og:description" content="Fast, reliable cleaning that follows strict procedures. Get a free quote within 24 hours." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
