--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Broome Service Solutions - Professional Cleaning Services | Fast & Reliable</title>
-    <meta name="description" content="Get professional cleaning for homes, offices, and commercial spaces. Transparent 3-step process, customized quotes, and consistent results. Book your free quote today!" />
-  <meta name="author" content="Broome Service Solutions" />
-    <meta name="keywords" content="cleaning services, home cleaning, office cleaning, professional cleaners, deep cleaning, move in cleaning, move out cleaning" />
 
-  <meta property="og:title" content="Broome Service Solutions - Professional Cleaning Done Right" />
-    <meta property="og:description" content="Fast, reliable cleaning that follows strict procedures. Get a free quote within 24 hours." />
+    <title>Broome Service Solutions | Premium Cleaning Company in Metro Atlanta</title>
+
+    <meta name="description" content="Broome Service Solutions provides professional cleaning for homes, offices, Airbnb turnovers, estates, and post-construction spaces in Metro Atlanta, Henry County, McDonough, Stockbridge, and Conyers. Fresh. Fast. Flawless." />
+    <meta name="author" content="Broome Service Solutions" />
+
+    <meta name="keywords" content="Atlanta cleaning company, cleaning services Atlanta, Airbnb cleaning Georgia, move out cleaning Henry County, post construction cleaners Atlanta, estate cleaning Atlanta, reliable cleaners McDonough, small office cleaning Atlanta" />
+
+    <meta property="og:title" content="Broome Service Solutions | Cleaning, Turnovers, Estates" />
+    <meta property="og:description" content="Professional cleaning with measurable hygiene, strict checklists, repeatable quality, and accountable results. Fresh. Fast. Flawless." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/icon.jpg" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:url" content="http://broomeserviceco.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Broome Service Solutions | Metro Atlanta Cleaning Company" />
+    <meta name="twitter:description" content="Airbnb turnovers, move in and move out cleaning, estate cleanouts, small office cleaning, and renovation recovery cleaning in Metro Atlanta." />
+    <meta name="twitter:image" content="/icon.jpg" />
+
+    <link rel="canonical" href="http://broomeserviceco.com" />
+    <link rel="icon" href="/icon.jpg" type="image/jpeg" />
   </head>
 
   <body>
